test/data/resolver/valid/parameter_property_and_unknown_expr.cypher
MATCH (p:Person) WHERE p.age = $x RETURN p.age + $x AS bumped
