test/data/resolver/invalid/unknown_property_via_expr_use.cypher
MATCH (p:Person) WHERE p.doesnt_exist = $x RETURN p.name
